# vault-authenticator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  build_linux_app.sh  build_mac_app.sh  build_windows_app.bat  desktop.py  migration_parser.py  pyproject.toml  requirements.txt  storage.py  updater.py  vault.spec  vault_linux.spec  vault_windows.spec
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-07-21-auto-updater.md
docs/superpowers/specs/: 2026-07-21-auto-updater-design.md
icon/: AppIcon.icns  vault-authenticator.desktop
static/: app.js  style.css
templates/: index.html
tests/: test_app_update_routes.py  test_updater.py
